--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ koin = "3.5.6"                          # https://github.com/InsertKoinIO/koin/r
 kotlin = "2.0.0"                        # https://github.com/JetBrains/kotlin/releases
 kotlinx-atomicfu = "0.24.0"             # https://github.com/Kotlin/kotlinx-atomicfu/releases
 kotlinx-datetime = "0.6.0"              # https://github.com/Kotlin/kotlinx-datetime/releases
-ktor = "2.3.11"                         # https://github.com/ktorio/ktor/releases, https://ktor.io/docs/releases.html#release-details
+ktor = "2.3.12"                         # https://ktor.io/docs/releases.html#release-details
 logback = "1.5.6"                       # https://github.com/qos-ch/logback/tags
 micrometer-prometheus = "1.13.1"        # https://github.com/micrometer-metrics/micrometer/releases
 mockk = "1.13.11"                       # https://github.com/mockk/mockk/releases
