--- a/kcrud-base/src/main/resources/config/config_security.conf
+++ b/kcrud-base/src/main/resources/config/config_security.conf
@@ -29,7 +29,7 @@ security {
 		providerName: "kcrud-jwt-auth"
 		providerName: ${?KCRUD_SECURITY_JWT_AUTH_PROVIDER_NAME}
 
-		tokenLifetimeSec: 86400 # 1 day, (seconds).
+		tokenLifetimeSec: 3600 # 1 hour, (seconds).
 		tokenLifetimeSec: ${?KCRUD_SECURITY_JWT_AUTH_TOKEN_LIFETIME_SEC}
 
 		audience: "kcrud"
