Do not generate the schema api in unit tests

--- a/kcrud-server/src/test/resources/application.conf
+++ b/kcrud-server/src/test/resources/application.conf
@@ -1,5 +1,7 @@
 # Copyright (c) 2024-Present Perracodex. Use of this source code is governed by an MIT license.
 
+include "config/config.conf"
+
 ktor {
 	development: true
 }
@@ -29,5 +31,5 @@ security {
 }
 
 apiSchema {
-	isEnabled: false
+	environments: []
 }
