--- a/kcrud-employment/src/test/resources/application.conf
+++ b/kcrud-employment/src/test/resources/application.conf
@@ -1,5 +1,7 @@
 # Copyright (c) 2024-Present Perracodex. Use of this source code is governed by an MIT license.
 
+include "config/config.conf"
+
 ktor {
 	development: true
 }
@@ -15,5 +17,5 @@ database {
 }
 
 apiSchema {
-	isEnabled: false
+	environments: []
 }
