--- a/kcrud-base/src/main/resources/config/config_database.conf
+++ b/kcrud-base/src/main/resources/config/config_database.conf
@@ -63,7 +63,7 @@ database {
 
 	# The database JDBC URL.
 	# In memory: "jdbc:h2:mem:regular;DB_CLOSE_DELAY=-1;"
-	# Persisent: "jdbc:h2:file:"${database.path}${database.name}
+	# Persistent: "jdbc:h2:file:"${database.path}${database.name}
 	jdbcUrl: "jdbc:h2:file:"${database.path}${database.name}
 	jdbcUrl: ${?KCRUD_DATABASE_JDBC_URL}
 
