--- a/kcrud-base/src/main/resources/config/config.conf
+++ b/kcrud-base/src/main/resources/config/config.conf
@@ -33,6 +33,13 @@ ktor {
 		# reload classes/resources when modified.
 		watch: [classes, resources]
 
+		# Timeout in seconds for reading/writting responses to client.
+		# https://api.ktor.io/ktor-server/ktor-server-netty/io.ktor.server.netty/-netty-application-engine/-configuration/index.html
+		requestReadTimeoutSeconds = 0 # "0" is infinite.
+		requestReadTimeoutSeconds = ${?KDOC_KTOR_DEPLOYMENT_REQUEST_READ_TIMEOUT_SECONDS}
+		responseWriteTimeoutSeconds = 10
+		responseWriteTimeoutSeconds = ${?KDOC_KTOR_DEPLOYMENT_RESPONSE_WRITE_TIMEOUT_SECONDS}
+
 		# https://ktor.io/docs/server-configuration-file.html#predefined-properties
 		# https://stackoverflow.com/questions/78091418/ktor-netty-configuration-values-for-expected-load/78182668#78182668
 		# https://medium.com/@akhaku/netty-data-model-threading-and-gotchas-cab820e4815a
