Added configuration flag to enhance coroutines debugging

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ kotlin.code.style=official
 # that may affect the debugging experience.
 # WARNING: Never set to 'true' in production as it can cause memory leaks.
 disableOptimizations=false
+# Enable detailed coroutine debug logging. Shoul be set to 'false' for production.
+enhanceCoroutinesDebugging=false
