Update OpenAPI schema

--- a/kcrud-server/src/main/resources/openapi/documentation.yaml
+++ b/kcrud-server/src/main/resources/openapi/documentation.yaml
@@ -32,12 +32,15 @@ paths:
             '*/*':
               schema:
                 type: "string"
+              examples:
+                Example#1:
+                  value: "Invalid session context. Use either admin/admin or guest/guest."
         "200":
           description: "OK"
           content:
             '*/*':
               schema:
-                type: "string"
+                $ref: "#/components/schemas/Function1_? super String"
         "500":
           description: "Internal Server Error"
           content:
@@ -59,13 +62,16 @@ paths:
           content:
             '*/*':
               schema:
-                type: "string"
+                $ref: "#/components/schemas/Function1_? super String"
         "400":
           description: "Bad Request"
           content:
             '*/*':
               schema:
                 type: "string"
+              examples:
+                Example#1:
+                  value: "Invalid session context. Use either admin/admin or guest/guest."
         "500":
           description: "Internal Server Error"
           content:
@@ -120,15 +126,6 @@ paths:
           schema:
             type: "integer"
       responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: ""
         "400":
           description: "Bad Request"
           content:
@@ -138,6 +135,24 @@ paths:
               examples:
                 Example#1:
                   value: "Invalid count. Must be between 1 and 100000."
+            application/json:
+              schema:
+                type: "string"
+        "404":
+          description: "Not Found"
+          content:
+            application/json:
+              schema:
+                type: "string"
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
   /demo/json:
     get:
       description: "Return all demo records as JSON."
@@ -182,7 +197,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/HealthCheck"
-  /rbac/admin:
+  /rbac/dashboard:
     get:
       description: ""
       parameters:
@@ -255,11 +270,11 @@ paths:
                   value: ""
   /rbac/login:
     get:
-      description: ""
+      description: "Redirects actors to the dashboard if they have an existing session\
+        \ <br> or to the login page if no valid session is found."
       responses:
         "302":
-          description: "Found <br> If the actor is not null, redirect to the admin\
-            \ view."
+          description: "Found <br> Redirect"
           content:
             text/plain:
               schema:
@@ -267,7 +282,7 @@ paths:
               examples:
                 Example#1:
                   description: ""
-                  value: "/rbac/admin"
+                  value: "/rbac/dashboard"
         "200":
           description: "OK"
           content:
@@ -290,10 +305,10 @@ paths:
               examples:
                 Example#1:
                   description: ""
-                  value: "/rbac/admin"
+                  value: "/rbac/dashboard"
   /rbac/logout:
     post:
-      description: ""
+      description: "Clears the session and redirects to the login page."
       responses:
         "302":
           description: "Found <br> Redirect"
@@ -854,6 +869,8 @@ components:
     Function1:
       type: "object"
       properties: { }
+    Function1_? super String:
+      type: "object"
     Function1_? super HTML:
       type: "object"
     Sort:
@@ -1478,19 +1495,19 @@ components:
         maritalStatus:
           type: "string"
           enum:
+            - "UNKNOWN"
             - "MARRIED"
             - "SINGLE"
             - "DIVORCED"
-            - "UNKNOWN"
         honorific:
           type: "string"
           enum:
+            - "UNKNOWN"
             - "MR"
             - "MRS"
             - "MS"
             - "DR"
             - "MISS"
-            - "UNKNOWN"
         contact:
           $ref: "#/components/schemas/ContactEntity"
         meta:
